--- a/STORE.WebAPI/DBConfig.json
+++ b/STORE.WebAPI/DBConfig.json
@@ -1,6 +1,6 @@
 {
-  "DataType": "MYSQL",
+  "DataType": "SQLSERVER",
   "MYSQL": "server=192.168.1.107;user id=root;pwd=root;database=store;SslMode = none;Charset=utf8",
-  "SQLSERVER": "server=localhost;user id=sa;pwd=123456;database=uidp",
+  "SQLSERVER": "server=192.168.1.113;user id=sa;pwd=123456;database=store",
   "ORACLE": "server=localhost;user id=root;pwd=root;database=uidp;SslMode = none;Charset=utf8"
 }
