--- a/STORE.WebAPI/DBConfig.json
+++ b/STORE.WebAPI/DBConfig.json
@@ -1,6 +1,6 @@
 {
-  "DataType": "SQLSERVER",
-  "MYSQL": "server=192.168.1.107;user id=root;pwd=root;database=store;SslMode = none;Charset=utf8",
+  "DataType": "MYSQL",
+  "MYSQL": "server=192.168.1.102;user id=root;pwd=root;database=store;SslMode = none;Charset=utf8",
   "SQLSERVER": "server=192.168.1.113;user id=sa;pwd=123456;database=store",
-  "ORACLE": "server=localhost;user id=root;pwd=root;database=uidp;SslMode = none;Charset=utf8"
+  "ORACLE": "server=;user id=root;pwd=root;database=uidp;SslMode = none;Charset=utf8"
 }
