--- a/STORE.WebAPI/STORE.WebAPI.csproj
+++ b/STORE.WebAPI/STORE.WebAPI.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="upload\image\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -24,6 +25,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.DirectoryServices" Version="4.5.0" />
+    <PackageReference Include="UEditor.Core" Version="1.0.6" />
   </ItemGroup>
 
   <ItemGroup>
